--- a/imgui.ini
+++ b/imgui.ini
@@ -16,19 +16,19 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Debug]
-Pos=1291,717
+Pos=1208,690
 Size=496,122
 Collapsed=0
 DockId=0x00000009,2
 
 [Window][SpotLight]
-Pos=1291,195
+Pos=1208,168
 Size=496,520
 Collapsed=0
 DockId=0x00000008,2
 
 [Window][Collision Debug]
-Pos=1291,717
+Pos=1208,690
 Size=496,122
 Collapsed=0
 DockId=0x00000009,1
@@ -39,19 +39,19 @@ Size=550,680
 Collapsed=0
 
 [Window][Camera Option]
-Pos=1291,717
+Pos=1208,690
 Size=496,122
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][PointLight]
-Pos=1291,195
+Pos=1208,168
 Size=496,520
 Collapsed=0
 DockId=0x00000008,1
 
 [Window][DirectionalLight]
-Pos=1291,195
+Pos=1208,168
 Size=496,520
 Collapsed=0
 DockId=0x00000008,0
@@ -65,7 +65,7 @@ Collapsed=0
 DockNode    ID=0x00000001 Pos=604,281 Size=418,284 Split=X
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=181,253 Selected=0x3FC1CF52
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=235,253 Selected=0x44A6A033
-DockNode    ID=0x00000005 Pos=1291,195 Size=496,644 Split=Y
-  DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=595,520 Selected=0x5A94F141
+DockNode    ID=0x00000005 Pos=1208,168 Size=496,644 Split=Y
+  DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=595,520 Selected=0x6EAC59E0
   DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=595,122 Selected=0xD793C64C
 
