--- a/imgui.ini
+++ b/imgui.ini
@@ -66,6 +66,6 @@ DockNode    ID=0x00000001 Pos=604,281 Size=418,284 Split=X
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=181,253 Selected=0x3FC1CF52
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=235,253 Selected=0x44A6A033
 DockNode    ID=0x00000005 Pos=1381,67 Size=496,644 Split=Y
-  DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=595,522 Selected=0x6EAC59E0
-  DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=595,120 Selected=0x392A5ADD
+  DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=595,522 Selected=0x5A94F141
+  DockNode  ID=0x00000009 Parent=0x00000005 SizeRef=595,120 Selected=0xD793C64C
 
