--- a/NewEngine.vcxproj
+++ b/NewEngine.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{8588e8f5-9143-4823-bbea-01c571774eea}</ProjectGuid>
     <RootNamespace>DirectX12</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>NewEngine</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
