--- a/.gitignore
+++ b/.gitignore
@@ -17,10 +17,10 @@
 mono_crash.*
 
 # Build results
-./[Dd]ebug/
-./[Dd]ebugPublic/
-./[Rr]elease/
-./[Rr]eleases/
+# ./[Dd]ebug/
+# ./[Dd]ebugPublic/
+# ./[Rr]elease/
+# ./[Rr]eleases/
 x64/
 x86/
 [Ww][Ii][Nn]32/
@@ -75,10 +75,10 @@ StyleCopReport.xml
 *_h.h
 *.ilk
 *.meta
-x64/*/*.obj
+# x64/*/*.obj
 *.iobj
 *.pch
-*.pdb
+# *.pdb
 *.ipdb
 *.pgc
 *.pgd
